# training_template

./: .gitignore  README.md  pyproject.toml
pipeline/: __init__.py
pipeline/downstream/: linear_probing.py  linear_segmentation_test.py
pipeline/training/: logger.py  lr_scheduler.py  trainer.py  training.py
src/pipeline/: base.py  base_data_module.py  logger.py  lr_scheduler.py  trainer.py  training.py
src/pipeline/feature_extraction/: base.py
src/utils/: reproducibility.py
training/pipeline/: base.py  trainer.py  training.py
training/pipeline/downstream/: linear_probing.py  linear_segmentation_test.py
training/pipeline/feature_extraction/: base.py
training/utils/: read_config.py
utils/: cuda.py
